--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # Web3 connection
-GAMBA_SOLANA_RPC="https://api.mainnet-beta.solana.com"
-# GAMBA_SOLANA_RPC="https://mainnet.helius-rpc.com/?api-key=30361f91-67fb-4d6f-a60c-ba30295a7e89"
+GAMBA_SOLANA_RPC="https://mainnet.helius-rpc.com/?api-key=30361f91-67fb-4d6f-a60c-ba30295a7e89"
 GAMBA_SOLANA_RPC_WS=
 
 # The address that should receive fees
