--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://sparkling-sparkling-orb.solana-mainnet.quiknode.pro/c4e54e08d9f20285f59c53306d251fd594532ddb"
+VITE_RPC_ENDPOINT="https://solana-mainnet.g.alchemy.com/v2/ST2cZf0nCDjjgg9Z9D2UKOWQtD1Abqxe"
 # VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
