--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://solana-mainnet.g.alchemy.com/v2/ST2cZf0nCDjjgg9Z9D2UKOWQtD1Abqxe"
+VITE_RPC_ENDPOINT="https://lb.drpc.org/ogrpc?network=solana&dkey=Ai1rF4SWykyxgTw9pVfLp5EftkdEdAQR747shlDYfw4q"
 # VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
