--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://lb.drpc.org/ogrpc?network=solana&dkey=Ai1rF4SWykyxgTw9pVfLp5EftkdEdAQR747shlDYfw4q"
+VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=e0c1fc46-398d-49da-bb37-7f28d6d4413f"
 # VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
