--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://api.mainnet-beta.solana.com"
-# VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
+VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=7b05747c-b100-4159-ba5f-c85e8c8d3997"
+# VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=7b05747c-b100-4159-ba5f-c85e8c8d3997"
