--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.27.0",
-    "@preact/signals-react": "^2.0.0",
     "@ledgerhq/errors": "6.16.3",
+    "@preact/signals-react": "^2.0.0",
     "@react-three/drei": "^9.89.0",
     "@react-three/fiber": "^8.15.11",
     "@solana/spl-token": "^0.3.8",
@@ -19,10 +19,12 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.18",
     "@solana/web3.js": "^1.78.5",
+    "@vercel/kv": "^3.0.0",
+    "@vercel/node": "^5.1.15",
     "buffer": "^6.0.3",
+    "gamba-core-v2": "0.4.0",
     "gamba-react-ui-v2": "0.7.0",
     "gamba-react-v2": "1.2.0",
-    "gamba-core-v2": "0.4.0",
     "html2canvas": "^1.4.1",
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
@@ -34,9 +36,9 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/matter-js": "^0.19.5",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.0.11",
-    "@types/matter-js": "^0.19.5",
     "@types/three": "^0.161.2",
     "@vitejs/plugin-react": "^3.1.0",
     "unplugin-fonts": "^1.0.3",
