--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "build": "vite build",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
-  "dependencies": {
-    "@coral-xyz/anchor": "^0.27.0",
-    "@preact/signals-react": "^2.0.0",
-    "@ledgerhq/errors": "6.16.3",
+"dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
+    "@preact/signals-react": "^1.3.8",
     "@react-three/drei": "^9.89.0",
     "@react-three/fiber": "^8.15.11",
-    "@solana/spl-token": "^0.3.8",
-    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.18",
-    "@solana/web3.js": "^1.78.5",
     "@vercel/kv": "^3.0.0",
     "buffer": "^6.0.3",
-    "gamba-react-ui-v2": "0.7.0",
-    "gamba-react-v2": "1.2.0",
-    "gamba-core-v2": "0.4.0",
+    "@gamba-labs/multiplayer-sdk": "^2.0.0",
+    "gamba-core-v2": "^2.0.0",
+    "gamba-react-ui-v2": "^2.0.0",
+    "gamba-react-v2": "^2.0.0",
     "html2canvas": "^1.4.1",
-    "matter-js": "^0.19.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "matter-js": "^0.20.0",
+    "framer-motion": "^12.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.10.0",
     "styled-components": "^6.0.8",
     "swr": "^2.2.4",
